--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "lucide-react": "^0.563.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.18"
   },
