--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tsparticles/slim": "^3.9.1",
     "autoprefixer": "^10.4.24",
     "clsx": "^2.1.1",
+    "course": "^0.0.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "mongodb": "^7.1.0",
